-f naming was fixed

--- a/front/florence-must-see-map-listing.html
+++ b/front/florence-must-see-map-listing.html
@@ -215,8 +215,10 @@
                         <label for="to">Куда едем: </label>
                         <input type="text" class="form-control" id="to">
                       </div>
-                      <button type="submit"  class="btn btn-primary">Submit</button>
+                      <button type="submit" class="btn btn-primary">Построить маршрут</button>
                     </form>
+                    <br />
+
                 </div>
                     <a data-toggle="collapse" href="#collapseFiltesmap" aria-expanded="false" aria-controls="collapseFiltesmap" class="btn_filter" id="open_filters"></a>
                     <div class="pull-right">
