--- a/front/index_2.html
+++ b/front/index_2.html
@@ -8,14 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="TravelGuide Site Template - Easly find places, guides, directions, info.">
     <meta name="author" content="Ansonika">
-    <title>TravelGuide Site Template - Easly find places, guides, directions, info.</title>
+    <title>BeTrip - Найди свой идеальный марщрут </title>
 
     <!-- Favicons-->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png">
+    <link rel="apple-touch-icon" type="image/x-icon" href="img/betrip_logo.png">
+    <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/betrip_logo.png">
+    <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/betrip_logo.png">
+    <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/betrip_logo.png">
 
     <!-- GOOGLE FONT -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,300" rel="stylesheet" type="text/css">
@@ -29,7 +29,7 @@
 
     <!-- SPECIFIC CSS -->
     <link href="layerslider/css/layerslider.min.css" rel="stylesheet">
-    
+
     <!-- YOUR CUSTOM CSS -->
     <link href="css/custom.css" rel="stylesheet">
 
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col--md-4 col-sm-3 col-xs-4">
                     <div id="logo_home">
-                        <h1><a href="index.html" title="TravelGuide template">TravelGuide template</a></h1>
+                        <h1><a href="" title="TravelGuide template">TravelGuide template</a></h1>
                     </div>
                 </div>
                 <nav class="col--md-8 col-sm-9 col-xs-8">
@@ -197,38 +197,42 @@
         <div id="layerslider" style="width:100%;height:667px;">
             <!-- first slide -->
             <div class="ls-slide" data-ls="slidedelay: 5000; transition2d:5;">
-                <img src="img/slides/slide_1.jpg" class="ls-bg" alt="Slide background" width="1600" height="667">
-                <h3 class="ls-l slide_typo" style="top: 45%; left: 50%;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">The most important info<br>
-                on your Mobile during a visit</h3>
-                <p class="ls-l slide_typo_2" style="top:55%; left:50%;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">
-                    Museum Guides / Directions / Tips&amp;info
-                </p>
+                <img src="img/slides/1.jpg" class="ls-bg" alt="Slide background" width="1600" height="667">
+                <h3 class="ls-l slide_typo" style="top: 45%; left: 50%;"
+                data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">
+                Мир прекрасен<br>
+                И мы это покажем</h3>
+                <!-- <p class="ls-l slide_typo_2" style="top:55%; left:50%;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">
+                    Природа / Обьекты искусства / Лучшие виды
+                </p> -->
             </div>
             <!-- second slide -->
             <div class="ls-slide" data-ls="slidedelay: 5000; transition2d:85;">
-                <img src="img/slides/slide_2.jpg" class="ls-bg" alt="Slide background" width="1600" height="667">
-                <h3 class="ls-l slide_typo" style="top: 45%; left: 50%;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">Find easily<br>
-                interesting place close to you</h3>
+                <img src="img/slides/5.jpg" class="ls-bg" alt="Slide background" width="1600" height="667">
+                <h3 class="ls-l slide_typo" style="top: 45%; left: 50%;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">
+                  Ваш маршрут<br>
+                  по самым красивым местам</h3>
                 <p class="ls-l slide_typo_2" style="top:55%; left:50%;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">
-                    Get Directions / Must see places / Eat&amp;Drink
+                    Природа / Обьекты искусства / Лучшие виды
                 </p>
             </div>
             <!-- third slide -->
             <div class="ls-slide" data-ls="slidedelay:5000; transition2d:103;">
-                <img src="img/slides/slide_3.jpg" class="ls-bg" alt="Slide background" width="1600" height="667">
-                <h3 class="ls-l slide_typo" style="top: 48%; left: 50%;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">Discover fantastic places</h3>
+                <img src="img/slides/3.jpg" class="ls-bg" alt="Slide background" width="1600" height="667">
+                <h3 class="ls-l slide_typo" style="top: 48%; left: 50%;" data-ls="offsetxin:0;durationin:2000;delayin:1000;easingin:easeOutElastic;rotatexin:90;transformoriginin:50% bottom 0;offsetxout:0;rotatexout:90;transformoriginout:50% bottom 0;">
+                  Дорога больше никогда не покажется скучной</h3>
                 <p class="ls-l slide_typo_2" style="top:54%; left:50%;" data-ls="durationin:2000;delayin:1000;easingin:easeOutElastic;">
-                    We offer a variety of services and options
+
                 </p>
             </div>
-            <div id="search_bar">
+            <!-- <div id="search_bar">
                 <form>
                     <div id="custom-search-input">
                         <input type="text" class=" search-query" placeholder="Search....">
                         <input type="submit" class="btn_search" value="submit">
                     </div>
                 </form>
-            </div>
+            </div> -->
             <!-- End search_bar -->
         </div>
     </div>
@@ -236,7 +240,7 @@
 
     <div class="container margin_60_30 fix_mobile">
         <div class="main_title">
-            <h2><strong>Explore</strong> what's interesting</h2>
+            <h2><strong>Находим</strong> самое интересное</h2>
             <p>
                 Ne his postulant posidonium adversarium. Ius tollit tamquam indoctum ea, cu quo equidem perfecto adipiscing. Eu mel aliquid delenit. Recteque laboramus ea est, te qui eirmod similique.
             </p>
@@ -244,9 +248,9 @@
         </div>
 
         <div class="row box_cat">
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-6 col-sm-6">
                 <a href="florence-must-see-map-listing.html">
-                    <span>24</span>
+                    <!-- <span>24</span> -->
                     <i class=" icon_set_1_icon-1"></i>
                     <h3>Must see</h3>
                     <p>
@@ -254,9 +258,9 @@
                     </p>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-6 col-sm-6">
                 <a href="florence-event-map-listing.html">
-                    <span>34</span>
+                    <!-- <span>34</span> -->
                     <i class="icon_set_1_icon-41"></i>
                     <h3>Events</h3>
                     <p>
@@ -264,31 +268,31 @@
                     </p>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-6">
-                <a href="florence-hotels-map-listing.html">
-                    <span>12</span>
-                    <i class="icon_set_1_icon-6"></i>
-                    <h3>Hotels </h3>
-                    <p>
-                        Pri melius fuisset at, pro legimus corpora no
-                    </p>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <a href="florence-restaurants-map-listing.html">
-                    <span>43</span>
-                    <i class="icon_set_1_icon-58"></i>
-                    <h3>Restaurants</h3>
-                    <p>
-                        Pri melius fuisset at, pro legimus corpora no
-                    </p>
-                </a>
-            </div>
+              <!-- <div class="col-md-3 col-sm-6">
+                  <a href="florence-hotels-map-listing.html">
+                      <span>12</span>
+                      <i class="icon_set_1_icon-6"></i>
+                      <h3>Hotels </h3>
+                      <p>
+                          Pri melius fuisset at, pro legimus corpora no
+                      </p>
+                  </a>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                  <a href="florence-restaurants-map-listing.html">
+                      <span>43</span>
+                      <i class="icon_set_1_icon-58"></i>
+                      <h3>Restaurants</h3>
+                      <p>
+                          Pri melius fuisset at, pro legimus corpora no
+                      </p>
+                  </a>
+              </div> -->
         </div>
         <!-- End row -->
 
         <div class="row box_cat">
-            <div class="col-md-3 col-sm-6">
+            <!-- <div class="col-md-3 col-sm-6">
                 <a href="florence-bars-map-listing.html">
                     <span>24</span>
                     <i class="icon_set_1_icon-20"></i>
@@ -307,10 +311,10 @@
                         Pri melius fuisset at, pro legimus corpora no
                     </p>
                 </a>
-            </div>
-            <div class="col-md-3 col-sm-6">
+            </div> -->
+            <div class="col-md-6 col-sm-6">
                 <a href="florence-transports.html">
-                    <span>43</span>
+                    <!-- <span></span> -->
                     <i class="icon_set_1_icon-25"></i>
                     <h3>Transport</h3>
                     <p>
@@ -318,9 +322,9 @@
                     </p>
                 </a>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-6 col-sm-6">
                 <a href="faq.html">
-                    <span>12</span>
+                    <!-- <span>12</span> -->
                     <i class="icon_set_1_icon-54"></i>
                     <h3>Info&amp;Faqs</h3>
                     <p>
@@ -568,8 +572,8 @@
     </div>
     <!-- End pattern dots -->
 
-    <div id="map_home">
-    </div>
+    <!-- <div id="map_home">
+    </div> -->
     <!-- End map_home -->
 
     <section class="bg_white margin_60_30">
