--- a/front/index_2.html
+++ b/front/index_2.html
@@ -242,7 +242,8 @@
         <div class="main_title">
             <h2><strong>Находим</strong> самое интересное</h2>
             <p>
-                Ne his postulant posidonium adversarium. Ius tollit tamquam indoctum ea, cu quo equidem perfecto adipiscing. Eu mel aliquid delenit. Recteque laboramus ea est, te qui eirmod similique.
+                Ne his postulant posidonium adversarium. Ius tollit tamquam indoctum ea, cu quo equidem perfecto adipiscing.
+                Eu mel aliquid delenit. Recteque laboramus ea est, te qui eirmod similique.
             </p>
             <span><em></em></span>
         </div>
@@ -342,7 +343,8 @@
             <div class="main_title">
                 <h2><strong>Most Viewed</strong> in TravelGuide</h2>
                 <p>
-                    Ne his postulant posidonium adversarium. Ius tollit tamquam indoctum ea, cu quo equidem perfecto adipiscing. Eu mel aliquid delenit. Recteque laboramus ea est, te qui eirmod similique.
+                    Ne his postulant posidonium adversarium. Ius tollit tamquam indoctum ea, cu quo equidem perfecto adipiscing.
+                    Eu mel aliquid delenit. Recteque laboramus ea est, te qui eirmod similique.
                 </p>
                 <span><em></em></span>
             </div>
@@ -371,10 +373,10 @@
                         <!-- End tools i-->
                         <div class="img_container_grid">
                             <a href="florence-must-see-detail.html">
-                                <img src="img/grid_home_1.jpg" width="800" height="480" class="img-responsive" alt="">
+                                <img src="img/is5.jpg" width="800" height="480" class="img-responsive" alt="">
                                 <div class="short_info_grid">
                                     <small><strong>Duration: 90 min.</strong></small>
-                                    <h3>Duomo Cathedral</h3>
+                                    <h3>Исакиевский собор</h3>
                                     <em>Historic Buildings</em>
                                     <p>
                                         Read more
@@ -407,10 +409,10 @@
                         <!-- End tools i-->
                         <div class="img_container_grid">
                             <a href="florence-must-see-detail.html">
-                                <img src="img/grid_home_3.jpg" width="800" height="468" class="img-responsive" alt="">
+                                <img src="img/duomo4.jpg" width="800" height="468" class="img-responsive" alt="">
                                 <div class="short_info_grid">
                                     <small><strong>Duration: 60 min.</strong></small>
-                                    <h3>Santa Maria Novella</h3>
+                                    <h3>Собор Дуомо, Милан</h3>
                                     <em>Monuments - Attractions</em>
                                     <p>
                                         Read more
@@ -441,10 +443,10 @@
                         <!-- End tools i-->
                         <div class="img_container_grid">
                             <a href="florence-hotel-detail.html">
-                                <img src="img/grid_home_2.jpg" width="800" height="468" class="img-responsive" alt="">
+                                <img src="img/khv3.jpg" width="800" height="468" class="img-responsive" alt="">
                                 <div class="short_info_grid">
                                     <small><strong>From 95$</strong></small>
-                                    <h3>Hotel Mariott</h3>
+                                    <h3>Набережная Хабаровска</h3>
                                     <em>Hotels</em>
                                     <p>
                                         Read more
